smacssified but with some issues e.g. body background color not showing up

--- a/public/styles/kimStyles.css
+++ b/public/styles/kimStyles.css
@@ -1,298 +1,1 @@
 
-  /* default view mobile <= 400-576px */
-  
-  * {
-    color: black;
-    font-size: small;
-  }
-  
-  body {
-    background-color: whitesmoke;
-  }
-
-
-  nav ul {
-    display: flex;
-    justify-content: center;
-    /* background-color: gray; */
-    height: 20px;
-    padding: 15px;
-    /* border-bottom: 1px solid gray; */
-    
-  }
-
-  nav{
-    margin-top: 20px;
-  }
-
-  a, p {
-    font-size: small;
-    text-decoration: none; 
-  }
-  
-  nav ul a {
-    line-height: 1.5;
-    color: black;
-    margin: 15px;
-    background-color: #A9A9A9	;
-    padding: 3px;
-    border: black solid 1px;
-    padding-left: 7px;
-    padding-right: 7px;
-    border-radius: 5px;
-   
-    }
-
-  a:hover{
-    color: rgb(85, 84, 84);
-  }
-
-  figcaption{
-    background-color: #A9A9A9;
-    height: 25px;
-    line-height: 25px;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
-  }
-
-  img {
-    margin: 20px 10px;
-  }
-
-  div {
-    background-color: black;
-    border-radius: 3px;
-  }
-
-  .icon, .active {
-    width: 50px;
-    margin: 10px 20px;
-    animation-name: spin;
-    animation-duration: 1.5s;
-    animation-iteration-count: 2;
-  }
-  
-  @keyframes spin {
-    from {transform:rotate(0deg);}
-    to {transform:rotate(360deg);}
-  }
-
-  .logo {
-    float: left;
-  }
-  
-
-  .mediumImage {
-    max-width: 100px;
-    border: gray solid 3px;
-    border-radius: 3px;
-  }
-
-  #patch {
-    border: none;
-    width: 100px;
-    margin-top: 20px;
-    margin-bottom: 52px;
-
-  }
-
-  #astroBios, #cosmonauts{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    text-align: center;
-    margin: 30px auto;
-  }
-
-  #astroBios{
-    margin-top: 7%;
-  }
-
-  #cosmonauts{
-    margin-bottom: 7%
-  }
-
-  #astroBios a:hover, #cosmonauts a:hover, ul a:hover{
-    color: gray;
-  }
-
-  ul a:hover{
-    color: white;
-    background-color: black;
-  }
-
-
-  footer p, footer a{
-    line-height: 1.5;
-    text-align: left;
-    color: whitesmoke;
-    margin-left: 20px;
-  }
-
-
-  footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color:gray;
-    }
-
-    footer a {
-
-      float: right;
-      margin-top: -40px;
-    }
-
-
-/* Single-direction drop shadow */
-
-hr.hrTop {
-  height: 12px;
-  border: 0;
-  box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
-}
-
-hr.hrBottom {
-  height: 12px;
-  border: 0;
-  box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
-  margin-bottom: 125px;
-}
-
-
-.bioPics {
-  width: 200px;
-  background-color: pink;
-  margin-bottom: 150px;
-}
-
-#bioMain {
-  margin-left: 0px;
-  background-color: yellow;
-  display: flex;
-}
-
-
-
-/* tablet size 576-992px */
-@media screen and (min-width: 576px) { 
-  body {
-    background-color: whitesmoke;
-  }
-
-
-  nav ul {
-    display: flex;
-    margin: 0px auto 20px auto;
-  }
-
-  a {
-    margin: auto 30px;
-    font-size: medium;
-    text-decoration: none; 
-    color: whitesmoke; 
-  }
-
-  a:hover{
-    color: rgb(85, 84, 84);
-  }
-
-  .mediumImage {
-    width: 150px;
-  }
-
-  div{
-    
-    width: 200px;
-    margin: 0 auto;
-  }
-
-  #astroBios, #cosmonauts{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-
-  }
-
-  footer p{
-    line-height: 1.5;
-    margin: 10px auto 10px 20px;
-    text-align: left;
-  }
-
-
-  footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: black;
-    color: white;
-    text-align: center;
-  }
-
-
-}
-
-/* large screen 992px+ */
-
-  @media screen and (min-width: 992px) { 
-  body {
-    background-color: whitesmoke;
-  }
-
-
-  nav ul {
-    display: flex;
-    margin: 30px auto 30px 100px;
-    margin-top: 0%;
-    margin-left: 0%;
-  }
-
-  a {
-    margin: auto 30px;
-    font-size: large;
-    text-decoration: none; 
-    color: whitesmoke; 
-  }
-
-  a:hover{
-    color: rgb(85, 84, 84);
-  }
-
-  .mediumImage {
-    width: 150px;
-  }
-
-  div{
-    
-    width: 200px;
-    margin: 0 auto;
-  }
-
-  #astroBios, #cosmonauts{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  }
-
-
-
-  footer p{
-    line-height: 2.5;
-    margin: 10px auto 10px 20px;
-    text-align: left;
-    font-size: 15px;
-    
-  }
-
-
-  footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: black;
-    color: white;
-  }
